tests/type-errors/safe-fns/leak_requires_unsafe.cx
struct Resource : @nodrop {
    int data;
};

void Resource::drop(*this) safe {
    @leak(this);
}

int main() {
    Resource value = (Resource) {
        .data = 1
    };

    value.drop();
    return 0;
}
